manifests/guestbook/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook
  namespace: guestbook
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
  labels:
    app: guestbook
spec:
  rules:
    - http:
        paths:
          - path: /guestbook/*
            pathType: Prefix
            backend:
              service: 
                name: guestbook
                port: 
                  number: 80
